--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
         kotlin_version = '1.3.50'
         nav_version = '2.2.0-alpha01'
         retrofit_version = '2.5.0'
+        moshi_version = '1.8.0'
+        kotlin_coroutines_version = '1.1.0'
+        retrofit_coroutines_adapter_version = '0.9.2'
     }
     repositories {
         google()
