Implemented repository using room database

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,12 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$retrofit_coroutines_adapter_version"
 
+    // Room and Lifecycle dependencies
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // logging
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
