--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         moshi_version = '1.8.0'
         kotlin_coroutines_version = '1.1.0'
         retrofit_coroutines_adapter_version = '0.9.2'
+        room_version = '2.0.0'
     }
     repositories {
         google()
