--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-    // logging
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    //Logging
+    implementation "com.squareup.okhttp3:logging-interceptor:3.9.0"
 
     implementation 'com.google.code.gson:gson:2.8.5'
 }
