--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,16 @@ dependencies {
     // Room and Lifecycle dependencies
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
     //Logging
     implementation "com.squareup.okhttp3:logging-interceptor:3.9.0"
 
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version"
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.2.0'
 }
