--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         kotlin_coroutines_version = '1.1.0'
         retrofit_coroutines_adapter_version = '0.9.2'
         room_version = '2.0.0'
+        ext.rxkotlin_version = '2.1.0'
+        ext.rxandroid_version = '2.0.1'
     }
     repositories {
         google()
